updated code + spec for crs negotiation
